k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kraken
  labels:
    app.kubernetes.io/name: open-kraken
