k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kraken-web
  namespace: kraken
  labels:
    app: kraken-web
spec:
  type: NodePort
  selector:
    app: kraken-web
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      nodePort: 30300
      protocol: TCP
